# logexp

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  Docker-USB-passthrough.md  Dockerfile  Makefile  PR_BODY.md  README.md  READMEold.md  alembic.ini  ansible.cfg  beamfoundry_app.py  bootstrap.md  docker-compose.linux.yml  docker-compose.mac.yml  docker-compose.pi.yml  docker-compose.yml  docker-requirements.txt  gunicorn.conf.py  logexp.sublime-project  migrations~HEAD  mypy.ini  nohup.out  poller.py  pr_description.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  usb-bridge.sh  wsgi.py
.github/workflows/: application-ci.yml  auto-label.yml  build.yml  ci.yml  lint.yml  test.yml  typecheck.yml
analytics/: api.py  diagnostics.py  engine.py
ansible/inventory/: hosts.ini
ansible/playbooks/: deploy-logexp.yml  provision-pi.yml
app/: __init__.py  blueprints.py  cli.py  config.py  db_types.py  extensions.py  geiger.py  ingestion.py  logging.py  logging_config.py  logging_setup.py  models.py  poller.py  schemas.py  timestamps.py
app/auth/: __init__.py  current_user.py  decorators.py  forms.py  routes.py  service.py
app/bp/about/: routes.py
app/bp/analytics/: __init__.py  routes.py
app/bp/api/: routes.py
app/bp/diagnostics/: __init__.py  routes.py
app/bp/diagnostics_runtime/: routes.py
app/bp/docs/: routes.py
app/bp/settings/: routes.py
app/bp/ui/: __init__.py  routes.py
app/middleware/: request_id.py
app/model_utils/: __init__.py  reading_validator.py  validators.py
app/services/: analytics.py  analytics_diagnostics.py  analytics_export.py  analytics_readings.py  analytics_utils.py  database_diagnostics.py  ingestion.py  poller.py
app/stubs/flask_login/: __init__.pyi  mixins.pyi
app/templates/: _sidebar.html  about.html  analytics.html  base.html  diagnostics.html  docs.html  index.html  login.html  readings.html  settings.html
beamfoundry/: .env.example  Dockerfile  Makefile  README.md  __init__.py  beamfoundry_app.py  docker-compose.linux.yml  docker-compose.mac.yml  docker-compose.pi.yml  docker-compose.yml  docker-requirements.txt  entrypoint.sh  fix_imports.py  gunicorn.conf.py  poller.py  requirements.txt
beamfoundry/.github/workflows/: ci.yml
beamfoundry/analytics/: api.py  diagnostics.py  engine.py
beamfoundry/ci/: README.md
beamfoundry/docs/: README.md  buildgeiger.md  ci-triage.md  roadmap.md  runtime_maps.md  test_trio_checklist.md  testing-logging.md
beamfoundry/migrations/: env.py
beamfoundry/migrations/versions/: ba449a49ecae_add_users_table.py
beamfoundry/scripts/: add_return_types.sh  analytics_demo.py  preflight.py
beamfoundry/tests/: conftest.py  test_analytics.py  test_analytics_engine.py  test_blueprint_registration.py  test_config_validation.py  test_geiger_parser.py  test_logging_analytics.py  test_migrations.py  test_routes.py  test_ui_routes.py  timezone.py
beamfoundry/tests/architecture/: README.md  __init__.py  test_blueprint_definition.py  test_blueprint_module_identity.py  test_blueprint_registration.py  test_diagnostics_routes_exist.py  test_module_identity.py
beamfoundry/tests/fixtures/: analytics.py  analytics_engine.py  poller_factory.py  reading_factory.py
beamfoundry/tests/helpers/: auth.py
beamfoundry/tests/integration/: test_ingestion_latest_reading.py
beamfoundry/tests/snapshots/: diagnostics.html  readings.html
beamfoundry/tests/unit/: __init__.py  test_analytics.py  test_analytics_load.py
docker/: entrypoint.sh
docs/: analytics_overview.md  logging.md  roadmap.md
logexp/: __init__.py  config.py  poller.py  poller_config.py
logexp/analytics/: api.py  diagnostics.py  engine.py
logexp/app/: __init__.py  about.py  analytics.py  app_blueprints.py  blueprints.py  cli.py  config.py  db_types.py  diagnostics.py  docs.py  extensions.py  geiger.py  ingestion.py  logging.py  logging_config.py  logging_loader.py  logging_setup.py  models.py  poller.py  readings.py  routes.py  schemas.py  timestamps.py  typing.py
logexp/app/api/: logging.py  readings.py
logexp/app/blueprints/: __init__.py
logexp/app/bp/: __init__.py
logexp/app/config/: __init__.py  defaults.py  env.py  loaders.py  validators.py
logexp/app/middleware/: request_id.py
logexp/app/model_utils/: __init__.py  reading_validator.py  (+1 more)
logexp/docs/: PiLogExpIntegration.md  analytics_overview.md  configuration.md  logging.md  naming_conventions.md  observability.md  roadmap.md  runtime_maps.md
logexp/migrations/: env.py
logexp/parsers/: mightyohm.py
logexp/seeds/: seed_data.py
logexp/validation/: config_validator.py  ingestion_validator.py
migrations/: alembic.ini  env.py
migrations/versions/: 1e987a6d5ef6_.py  48f0ab714585_.py  aed4ddd31677_add_device_id.py  b650a74d8579_initial_schema_for_experiments.py
scripts/: analytics_demo.py  check_env_parity.py  ci_diagnostics.py  log_demo.py  preflight.py  rebuild_test_db.py
seeds/: seed_data.py
tests/: README.md  conftest.py  test_analytics.py  test_analytics_engine.py  test_config_schema.py  test_config_validation.py  test_container_boot.py  test_diagnostics.py  test_diagnostics_smoke.py  test_env_contract.py  test_geiger_parser.py  test_ingestion_validation.py  test_logging.py  test_logging_analytics.py  test_migrations.py  test_models.py  test_poller_diagnostics.py  test_poller_polling_enabled.py  test_poller_serial.py  test_routes.py  timezone.py
tests/architecture/: manifest.md  test_blueprint_definition.py  test_blueprint_import_count.py  test_blueprint_module_identity.py  test_blueprint_singleton.py  test_import_integrity.py  test_module_identity.py  test_no_blueprint_redefinition.py
tests/fixtures/: analytics.py  analytics_engine.py  poller_factory.py  reading_factory.py
tests/helpers/: analytics.py
tests/integration/: test_ingestion_from_pi.py  test_ingestion_latest_reading.py
tests/unit/: test_analytics.py  test_analytics_load.py  test_ingestion.py  test_poller_forever.py  test_poller_once.py
validation/: config_validator.py  ingestion_validator.py
(+80 files in other folders)
