[project]
name = "beamfoundry"
version = "0.1.0"
description = "beamfoundry"
requires-python = ">=3.10, <3.11"
dependencies = [
    "flask",
    "flask_sqlalchemy",
    "flask_migrate",
    "gunicorn",
    "psycopg2-binary",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# ------------------------------------------------------------------------------
# SETUPTOOLS — canonical package declaration
# ------------------------------------------------------------------------------
[tool.setuptools]
packages = ["beamfoundry"]

# ------------------------------------------------------------------------------
# RUFF — linter + formatter
# ------------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
extend-select = ["I"]
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ------------------------------------------------------------------------------
# BLACK — optional
# ------------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py310"]

# ------------------------------------------------------------------------------
# PYTEST — deterministic test discovery
# ------------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests",
]

# ------------------------------------------------------------------------------
# COVERAGE — canonical
# ------------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["beamfoundry"]

[tool.coverage.report]
show_missing = true
skip_covered = true

# ------------------------------------------------------------------------------
# MYPY — strict, modern, SQLAlchemy‑2.0‑compatible
# ------------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
mypy_path = ".,beamfoundry/stubs"
explicit_package_bases = true
namespace_packages = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
show_error_codes = true
pretty = true
ignore_missing_imports = true

# ------------------------------------------------------------------------------
# MYPY OVERRIDES — minimal, correct
# ------------------------------------------------------------------------------
[[tool.mypy.overrides]]
module = "beamfoundry.tests.*"
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "beamfoundry.tests.fixtures.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "beamfoundry.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "beamfoundry.cli"
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.*"
ignore_errors = true

# ------------------------------------------------------------------------------
# PYLANCE — silence false positives
# ------------------------------------------------------------------------------
[tool.pylance]
typeCheckingMode = "basic"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
